02_tracing/service-02/deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-02
  name: service-02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-02
  template:
    metadata:
      labels:
        app: service-02
    spec:
      serviceAccountName: deg-services-sa
      containers:
        - image: quay.io/deguene-admin/service-02:06
          imagePullPolicy: Always
          name: service-02
          ports:
            - containerPort: 8081
              protocol: TCP
