02_tracing/service-02/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-02
  name: service-02
spec:
  type: NodePort
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    app: service-02
