02_tracing/service-02/deploy/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: service-01
  name: service-01
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: service-01
    weight: 100
